--- a/privacy.html
+++ b/privacy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="uk" class="dark">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlaySelf - Політика конфіденційності</title>
+    <title>PlaySelf - Privacy Policy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -36,14 +36,14 @@
                 </div>
                 <h1 class="text-3xl font-black tracking-tighter text-white uppercase">PlaySelf</h1>
             </div>
-            <h2 class="text-4xl font-black text-white mb-4">Політика конфіденційності</h2>
-            <p class="text-slate-500 font-medium tracking-widest uppercase text-xs">Дата набрання чинності: 9 січня 2026 року</p>
+            <h2 class="text-4xl font-black text-white mb-4">Privacy Policy</h2>
+            <p class="text-slate-500 font-medium tracking-widest uppercase text-xs">Effective Date: January 9, 2026</p>
         </header>
 
         <div class="space-y-8">
             <section class="glass p-6 md:p-8 rounded-3xl">
                 <p class="text-lg leading-relaxed">
-                    Ця Політика конфіденційності описує, як веб-додаток <strong class="text-white">PlaySelf</strong> («Додаток»), доступний за адресою <code class="bg-slate-800 px-2 py-1 rounded text-accent">playself.pp.ua</code>, збирає, використовує та зберігає вашу інформацію.
+                    This Privacy Policy describes how the <strong class="text-white">PlaySelf</strong> web application ("App"), hosted at <code class="bg-slate-800 px-2 py-1 rounded text-accent">playself.pp.ua</code>, collects, uses, and stores your information.
                 </p>
             </section>
 
@@ -52,28 +52,28 @@
                     <div class="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center border border-slate-700">
                         <i class="fa-solid fa-database text-accent text-sm"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">1. Інформація, яку ми збираємо</h3>
+                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">1. Information We Collect</h3>
                 </div>
                 <div class="grid gap-4">
                     <div class="glass p-5 rounded-2xl flex gap-4">
                         <i class="fa-brands fa-google text-2xl text-slate-500"></i>
                         <div>
-                            <h4 class="font-bold text-white mb-1">Дані облікового запису Google</h4>
-                            <p class="text-sm text-slate-400">Ім'я, електронна пошта (як унікальний ID) та фото профілю для вашої персоналізації.</p>
+                            <h4 class="font-bold text-white mb-1">Google Account Data</h4>
+                            <p class="text-sm text-slate-400">Name, email (as a unique User ID), and profile picture for personalization.</p>
                         </div>
                     </div>
                     <div class="glass p-5 rounded-2xl flex gap-4">
                         <i class="fa-solid fa-gamepad text-2xl text-slate-500"></i>
                         <div>
-                            <h4 class="font-bold text-white mb-1">Ігрові списки та коментарі</h4>
-                            <p class="text-sm text-slate-400">Списки ігор («Улюблені», «Планую», «Пройдено»), а також тексти коментарів, які ви залишаєте до ігор.</p>
+                            <h4 class="font-bold text-white mb-1">Game Lists & Comments</h4>
+                            <p class="text-sm text-slate-400">Game lists ("Favorites", "Backlog", "Completed") and any comments you post about games.</p>
                         </div>
                     </div>
                     <div class="glass p-5 rounded-2xl flex gap-4">
                         <i class="fa-brands fa-steam text-2xl text-slate-500"></i>
                         <div>
-                            <h4 class="font-bold text-white mb-1">Steam ID (Опціонально)</h4>
-                            <p class="text-sm text-slate-400">Ваш публічний SteamID64 для синхронізації часу в іграх.</p>
+                            <h4 class="font-bold text-white masked mb-1">Steam ID (Optional)</h4>
+                            <p class="text-sm text-slate-400">Your public SteamID64 for game playtime synchronization.</p>
                         </div>
                     </div>
                 </div>
@@ -84,24 +84,24 @@
                     <div class="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center border border-slate-700">
                         <i class="fa-solid fa-gears text-accent text-sm"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">2. Використання інформації</h3>
+                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">2. How We Use Information</h3>
                 </div>
                 <ul class="space-y-3 px-2">
                     <li class="flex items-center gap-3">
                         <i class="fa-solid fa-check text-success"></i>
-                        <span>Автентифікація користувача та збереження ігрового прогресу.</span>
+                        <span>User authentication and saving game progress.</span>
                     </li>
                     <li class="flex items-center gap-3">
                         <i class="fa-solid fa-check text-success"></i>
-                        <span>Відображення вашого профілю та коментарів іншим користувачам.</span>
+                        <span>Displaying your profile and comments to other registered users.</span>
                     </li>
                     <li class="flex items-center gap-3">
                         <i class="fa-solid fa-check text-success"></i>
-                        <span>Синхронізація бібліотеки між різними пристроями.</span>
+                        <span>Synchronizing your library across different devices.</span>
                     </li>
                 </ul>
                 <p class="mt-4 p-4 bg-accent/10 border border-accent/20 rounded-xl text-sm text-accent">
-                    <i class="fa-solid fa-user-shield mr-2"></i> Ми <strong>не передаємо</strong> ваші дані третім особам і не використовуємо їх для реклами.
+                    <i class="fa-solid fa-user-shield mr-2"></i> We <strong>do not</strong> share your data with third parties or use it for advertising.
                 </p>
             </section>
 
@@ -110,29 +110,29 @@
                     <div class="w-8 h-8 bg-slate-800 rounded-lg flex items-center justify-center border border-slate-700">
                         <i class="fa-solid fa-cloud text-accent text-sm"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">3. Зберігання даних</h3>
+                    <h3 class="text-xl font-bold text-white uppercase tracking-tight">3. Data Storage</h3>
                 </div>
                 <p class="text-slate-400">
-                    Всі дані зберігаються в захищеній хмарній базі даних <strong class="text-white">Google Firebase Firestore</strong>. 
-                    Ми використовуємо Local Storage браузера виключно для кешування ваших налаштувань.
+                    All user data is stored in a secure cloud database: <strong class="text-white">Google Firebase Firestore</strong>. 
+                    Browser Local Storage is used strictly for caching your settings.
                 </p>
             </section>
 
             <section class="glass p-6 rounded-3xl border-l-4 border-l-danger">
-                <h3 class="text-lg font-bold text-white mb-2 uppercase tracking-tight">4. Видалення даних</h3>
+                <h3 class="text-lg font-bold text-white mb-2 uppercase tracking-tight">4. Data Deletion</h3>
                 <p class="text-sm">
-                    Ви маєте право вимагати видалення всіх ваших даних. Для цього, будь ласка, зверніться до нас за електронною адресою, вказаною нижче.
+                    You have the right to request the deletion of all your data. To do so, please contact us at the email address provided below.
                 </p>
             </section>
 
             <footer class="pt-12 border-t border-slate-800 text-center">
-                <p class="text-slate-500 uppercase tracking-widest text-[10px] font-bold mb-4">Зв'язок з розробником</p>
+                <p class="text-slate-500 uppercase tracking-widest text-[10px] font-bold mb-4">Contact Developer</p>
                 <a href="mailto:sashkinapps@gmail.com" class="text-xl font-black text-white hover:text-accent transition-colors flex items-center justify-center gap-2">
                     <i class="fa-solid fa-envelope text-accent"></i> sashkinapps@gmail.com
                 </a>
                 <div class="mt-12">
-                    <a href="index.html" class="inline-flex items-center gap-2 px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-xl transition-all active:scale-95 font-bold text-sm">
-                        <i class="fa-solid fa-arrow-left"></i> Повернутися на головну
+                    <a href="./" class="inline-flex items-center gap-2 px-6 py-3 bg-slate-800 hover:bg-slate-700 text-white rounded-xl transition-all active:scale-95 font-bold text-sm">
+                        <i class="fa-solid fa-arrow-left"></i> Back to Home
                     </a>
                 </div>
             </footer>
